--- a/style.css
+++ b/style.css
@@ -92,8 +92,11 @@ body{
 }
 
 img{
-    max-width: 100%;
-    height: auto;
+    width: 100%;
+}
+
+.pq{
+    width: 30%;
     display: block;
     margin: auto;
 }
